--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
+    "buffer": "^6.0.3",
     "cookie-parser": "~1.4.4",
     "dateformat": "^4.5.1",
     "debug": "~2.6.9",
@@ -24,6 +25,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
     "nodemon": "^2.0.13",
-    "nunjucks": "^3.2.3"
+    "nunjucks": "^3.2.3",
+    "stream": "^0.0.2"
   }
 }
