--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "server": "cross-env NODE_ENV=production PORT=80 node server",
     "lint": "eslint ."
   },
   "dependencies": {
