--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-validator": "^6.14.0",
     "firebase": "^8.10.0",
-    "firebase-admin": "^9.11.1",
-    "firebase-functions": "^3.15.5",
+    "firebase-admin": "^4.2.1",
+    "firebase-functions": "^0.5.9",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
